--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "dependencies": {
     "jsdom": "^22.1.0",
-    "lunr": "^2.3.9"
+    "lunr": "^2.3.9",
+    "prismjs": "^1.29.0"
   }
 }
