--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "jsdom": "^22.1.0",
+    "jsdom": "23.0.1",
     "lunr": "^2.3.9",
     "prismjs": "^1.29.0"
   }
