--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "jsdom": "24.0.0",
     "lunr": "^2.3.9",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "temml": "^0.10.24"
   }
 }
