Add rudimentary watch mode

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsdom": "24.0.0",
     "lunr": "^2.3.9",
     "prismjs": "^1.29.0",
-    "temml": "^0.10.24"
+    "temml": "^0.10.24",
+    "watcher": "^2.3.1"
   }
 }
